// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`anonymous function 1`] = `
"
(function(){
    console.log('anonymous function');
}())

      ↓ ↓ ↓ ↓ ↓ ↓

(function () {
    console.time('function');

    console.log('anonymous function');
    console.timeEnd('function');
})();
"
`;

exports[`arrow function 1`] = `
"
const foo = () => 'test';

      ↓ ↓ ↓ ↓ ↓ ↓

const foo = function () {
  console.time('foo');
  var _returnValue = 'test';
  console.timeEnd('foo');
  return _returnValue;
};
"
`;

exports[`clazz method 1`] = `
"
class clazz {
  method() {
    console.log('class method !');
  }
}

      ↓ ↓ ↓ ↓ ↓ ↓

class clazz {
  method() {
    console.time('function');

    console.log('class method !');
    console.timeEnd('function');
  }
}
"
`;

exports[`function with return statement 1`] = `
"
function foo() {
  const bar = 'bar';
  return bar;
}

      ↓ ↓ ↓ ↓ ↓ ↓

function foo() {
  console.time('foo');

  const bar = 'bar';
  var _returnValue = bar;
  console.timeEnd('foo');
  return _returnValue;
}
"
`;

exports[`function without return statement 1`] = `
"
function todo() {
  console.log('toto');
}

      ↓ ↓ ↓ ↓ ↓ ↓

function todo() {
  console.time('todo');

  console.log('toto');
  console.timeEnd('todo');
}
"
`;
